--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-// Footer.astro - Improved footer component with better links and organization
+import '../styles/footer.css';
 ---
 
 <footer>
