--- a/src/pages/committee.astro
+++ b/src/pages/committee.astro
@@ -4,6 +4,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import '../styles/pages/committee.css';
+import BoardOfDirectors from '../components/BoardOfDirectors.astro';
 ---
 
 <!DOCTYPE html>
