--- a/src/styles/pages/history.css
+++ b/src/styles/pages/history.css
@@ -128,7 +128,7 @@ blockquote:hover {
 }
 
 blockquote::before {
-  content: """;
+  content: "";
   position: absolute;
   top: 10px;
   left: 10px;
