--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,7 @@ import '../styles/Components/header.css';
     </div>
 </header>
 
-<script>
+<script is:inline>
     document.addEventListener('DOMContentLoaded', function() {
         const navToggle = document.querySelector('.nav-toggle');
         const nav = document.querySelector('nav');
